--- a/portfolio/static/templates/index.html
+++ b/portfolio/static/templates/index.html
@@ -29,7 +29,7 @@
     <main class="main">
       <!-- Секция превью -->
       <section class="main__home home" id="home">
-        <h1 class="home__title">NAME SURNAME</h1>
+        <h1 class="home__title">Вадим Пархоменко</h1>
         <p class="home__subtitle">WEB-DEVELOPER, PYTHON PROGRAMMER</p>
       </section>
       <!-- Секция с рассказом о себе -->
